tests/ui/numbered-positional-tuple.stderr
error: ambiguous reference to positional arguments by number in a tuple struct; change this to a named argument
 --> tests/ui/numbered-positional-tuple.rs:4:61
  |
4 | ...mes {0} (expected < {})", i32::MAX)]
  |                              ^^^^^^^^
